# retro-mesh-console

./: .gitignore  README.md  apply_patches.py  ecosystem_mdns_plan.md  extract.py  extracted.txt  extracted_utf8.txt  flutter_crash_log.txt  generate_icon.py  implementation_plan.md  pubspec.yaml  temp.jsonl  temp_gamepad.dart  temp_gamepad_utf8.dart  temp_main.dart  temp_main_utf8.dart  temp_role.dart  temp_role_utf8.dart  temp_router.dart  temp_router_utf8.dart  test_fp.dart
.github/workflows/: android.yml  ios.yml  pages.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  libretro-frontend.cpp  libretro-frontend.h  miracast-audio.cpp  miracast-render.cpp  native-audio.cpp  native-render.cpp  retro-bridge.cpp  retro-bridge.h  webcaster-audio.cpp  webcaster-render.cpp
assets/cores/: .gitkeep  bluemsx_libretro_ios.dylib  dosbox_pure_libretro_ios.dylib  fceumm_libretro_ios.dylib  gambatte_libretro_ios.dylib
docs/: index.html
ios/Runner/: AppDelegate.swift  CastingAdapter.swift  Info.plist  NetworkManager.swift  Runner-Bridging-Header.h  ThermalManager.swift  WebCaster.swift  miracast-audio.mm  miracast-render.mm  native-audio.mm  native-render.mm  retro-bridge.h  retro-bridge.mm  webcaster-audio.mm  webcaster-render.mm
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
scripts/: add_ios_sources.rb  download_cores.dart
test/: emulation_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+41 files in other folders)
